Update Mel Small Brew.html

--- a/Mel Small Brew.html
+++ b/Mel Small Brew.html
@@ -61,22 +61,22 @@
 				
 			</header>
 		
-          <img src="logu.JPG" id="logu">
+          <img src="logu.jpg" id="logu">
 		  <h1 style="font-size: 500%;margin-top:1%;">Mel Small Brew</b></h1>
 		  <p>Sweet dreams are made of teas</p>
 		   <main id="menu">
 			<figure>
-				<img src="pictures/milktea.JPG" id="pictures" alt="Product Image">
+				<img src="pictures/milktea.jpg" id="pictures" alt="Product Image">
 				<figcaption>Milktea - 39 pesos</figcaption>
 				<figcaption style="font-size: 20px">Dive into a world of flavor with <br>our MilkTea! Crafted from the finest<br> tea leaves, brewed to perfection,<br> and blended with creamy milk, our Milk<br>Tea promises a delightful <br>journey for your taste buds.</figcaption>
 			</figure>
 			<figure>
-				<img src="pictures/milkshake.JPG" id="pictures" alt="Product Image">
+				<img src="pictures/milkshake.jpg" id="pictures" alt="Product Image">
 				<figcaption>Milkshake - 59 pesos</figcaption>
 				<figcaption style="font-size: 20px">Craving something sweet, smooth<br> and utterly delicious? Our creamy<br> milkshake is just what you need.</figcaption>
 			</figure>			
 			<figure>
-				<img src="pictures/coffee.JPG" id="pictures">
+				<img src="pictures/coffee.jpg" id="pictures">
 				<figcaption>Coffee - 85 pesos</figcaption>
 				<figcaption style="font-size: 20px">Feeling The chill? <br> Need some warmth? <br> Look no further our hot coffee <br> is here to the rescue! Savor<br>  the rich, aromatic taste of <br> freshly ground beans with every sip. </figcaption>
 			</figure>
