--- a/Log-in.html
+++ b/Log-in.html
@@ -60,7 +60,7 @@
 <body>
 
 <form onsubmit="event.preventDefault(); validateLogin()">
-<center><img src="logu.JPG" id="logu" width = 80 height = 80></center>
+<center><img src="logu.jpg" id="logu" width = 80 height = 80></center>
 
 <label for="username">Username:</label>
 <input type="text" id="username" name="username" required><br>
