--- a/ABOUT.html
+++ b/ABOUT.html
@@ -204,7 +204,7 @@ html {
 <div class="row">
   <div class="column">
     <div class="card">
-      <img src="pictures/jm.JPG" alt="JM" style="width:99%">
+      <img src="pictures/jm.jpg" alt="JM" style="width:99%">
       <div class="container">
         <h2>Jm Doe</h2>
         <p class="title">Big costumer</p>
@@ -217,7 +217,7 @@ html {
   
   <div class="column">
     <div class="card">
-     <img src="pictures/jenzel.JPG" alt="JENZEL" style="width:60%">
+     <img src="pictures/jenzel.jpg" alt="JENZEL" style="width:60%">
       <div class="container">
         <h2>Jenzel Ross</h2>
         <p class="title">Art Director</p>
@@ -230,7 +230,7 @@ html {
 
   <div class="column">
     <div class="card">
-       <img src="pictures/jennylou.JPG" alt="JENNYLOU" style="width:70%">  
+       <img src="pictures/jennylou.jpg" alt="JENNYLOU" style="width:70%">  
       <div class="container">
         <h2>Jennylou Grey</h2>
         <p class="title">Designer</p>
