--- a/store.html
+++ b/store.html
@@ -147,7 +147,7 @@
 				<div class="shopping-cart"><a href="mycashier.html">&#128722;</a></div>
 				
 			</header>
-          <img src="pictures/logu.JPG" id="pictures">
+          <img src="pictures/logu.jpg" id="pictures">
 		  <h1 style="font-size: 500%;margin-top:1%;">Mel Small Brew</b></h1>
 		  <p>Sweet dreams are made of teas</p>
 
@@ -156,7 +156,7 @@
 		   <article>
 		
 		<figure><big>
-<img src="pictures/milktea.JPG" id="pictures" alt="Product Image">
+<img src="pictures/milktea.jpg" id="pictures" alt="Product Image">
 		  <ul style="list-style: none; text-align: justify;">
 		  <figcaption><b>Milk Tea</b>.........................................................................................39</figcaption>
 		  <figcaption><b>Matcha</b>...........................................................................................39</figcaption>
@@ -172,7 +172,7 @@
 		   <section>
  
 		  <figure>
-		   <img src="pictures/milkshake.JPG" id="pictures" alt="Product Image">
+		   <img src="pictures/milkshake.jpg" id="pictures" alt="Product Image">
 		   <ul style="list-style: none; text-align: justify;">
 		   <figcaption><b>Milk Shake</b>...................................................................59</figcaption>
 		   <figcaption><b>Mango Shake</b>..................................................................59</figcaption>
@@ -189,7 +189,7 @@
 		   <aside>
 		  
 		  <figure>
-		 <img src="pictures/coffee.JPG" id="pictures">
+		 <img src="pictures/coffee.jpg" id="pictures">
 		  <ul style="list-style: none; text-align: justify;">
 		  <figcaption><b>Hot Coffee</b>...........................................................................85</figcaption>
 		  <figcaption><b>Black Coffee</b>.........................................................................85</figcaption>
