--- a/mycashier.html
+++ b/mycashier.html
@@ -80,7 +80,7 @@
             </div>
         </div>
         <div class="header">
-            <img src="Bueno_cute.png" alt="images" id="logo">
+            <img src="logu.jpg" alt="images" id="logu">
         </div>
         <div class="screen" data-display>
             <button class="screen__reset hidden" data-restart>Restart</button>
