--- a/ABOUT.html
+++ b/ABOUT.html
@@ -2,7 +2,7 @@
 <html>
 
 <head>
-<link rel="icon"type="image/x-icon"href="pictures/logu.JPG">
+<link rel="icon"type="image/x-icon"href="pictures/logu.jpg">
 <style>
 
 header {
