Update Mel Small Brew.html

--- a/Mel Small Brew.html
+++ b/Mel Small Brew.html
@@ -2,7 +2,7 @@
   <html>
         <head>
 		<title>Mel Small brew</title>
-		<link rel="icon"type="image/x-icon"href="pictures/logu.JPG">
+		<link rel="icon"type="image/x-icon"href="pictures/logu.jpg">
 		<link rel="stylesheet" href="Css Files/mel.css">
 		
         </head>
