--- a/mycashier.html
+++ b/mycashier.html
@@ -9,7 +9,7 @@
     <meta name="theme-color" content="#ffffff">
     <meta name="msapplication-config" content="./browserconfig.xml">
 	<link rel="apple-touch-icon" sizes="180x180" href="./img/apple-touch-icon.png">
-    <link rel="icon" type="image/x-icon" href="logu.JPG">
+    <link rel="icon" type="image/x-icon" href="logu.jpg">
     <link rel="icon" type="image/JPG" sizes="16x16" href="./img/logu.JPG">
     <link rel="manifest" href="./manifest.json">
     <link rel="mask-icon" href="./img/logu.JPG" color="#666666">
