--- a/mycashier.html
+++ b/mycashier.html
@@ -10,9 +10,9 @@
     <meta name="msapplication-config" content="./browserconfig.xml">
 	<link rel="apple-touch-icon" sizes="180x180" href="./img/apple-touch-icon.png">
     <link rel="icon" type="image/x-icon" href="logu.jpg">
-    <link rel="icon" type="image/JPG" sizes="16x16" href="./img/logu.JPG">
+    <link rel="icon" type="image/jpg" sizes="16x16" href="./img/logu.jpg">
     <link rel="manifest" href="./manifest.json">
-    <link rel="mask-icon" href="./img/logu.JPG" color="#666666">
+    <link rel="mask-icon" href="./img/logu.jpg" color="#666666">
         <link rel="stylesheet" href="VirtualCashier.css">
     <script src="script.js" defer></script>
     <!-- uncomment the below script to convert to PWA -->
