--- a/ABOUT.html
+++ b/ABOUT.html
@@ -174,6 +174,7 @@ html {
 		<div class="open-menu-btn" onclick="openNav()">&#9776; </div>
 		<div id="mySidenav" class="sidenav">
 			<a href="javascript:void(0)" class="closebtn"  onclick="closeNav()">&times;</a>
+			<a href="Mel Small Brew.html">HOME</a>
 			<a href="store.html">STORE</a>
 			<a href="ABOUT.html">ABOUT</a>
 			<a href="#Services">SERVICES</a>
