--- a/Contact.html
+++ b/Contact.html
@@ -113,6 +113,7 @@ nav ul li a{
 		<div class="open-menu-btn" onclick="openNav()">&#9776; </div>
 		<div id="mySidenav" class="sidenav">
 			<a href="javascript:void(0)" class="closebtn"  onclick="closeNav()">&times;</a>
+			<a href="Mel Small Brew.html">HOME</a>
 			<a href="store.html">STORE</a>
 			<a href="ABOUT.html">ABOUT</a>
 			<a href="#Services">SERVICES</a>
@@ -122,6 +123,7 @@ nav ul li a{
 		<header>
 				<nav>
 					<ul>  
+					<li><a href="Mel Small Brew.html" style="float: left; margin-left:20px;">HOME</a></li>
 					<li><a href="store.html" style="float: left; margin-left:20px;">STORE</a></li>                      
 					<li><a href="ABOUT.html" style="float: left; margin-left:20px;">ABOUT</a></li>
 					<li><a div style="text-align: left; margin-left:10px;"></a></li>
