--- a/ABOUT.html
+++ b/ABOUT.html
@@ -185,6 +185,7 @@ html {
 
 				<nav>
 					<ul>  
+					<li><a href="Mel Small Brew.html" style="float: left; margin-left:20px;">HOME</a></li>
 					<li><a href="store.html" style="float: left; margin-left:20px;">STORE</a></li>                      
 					<li><a href="ABOUT.html" style="float: left; margin-left:20px;">ABOUT</a></li>
 					<li><a div style="text-align: left; margin-left:10px;"></a></li>
